adds profile mock, graphql, swagger update
